<com.slidinguppanel.SlidingUpPanelLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/slidinguppanel"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal">

        <TextView
                android:text="@string/tAppNameCustomButton"
                style="@style/Title"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/panel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/panel_height_custom"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/expand"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tExpand"/>

            <Button
                    android:id="@+id/collapse"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tCollapse"/>

        </LinearLayout>

        <ScrollView
                android:id="@+id/panel_content"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="@android:color/white">

            <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tButton1"/>

                <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tButton2"/>

                <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tButton3"/>

                <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tButton4"/>

                <Button
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tButton5"/>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</com.slidinguppanel.SlidingUpPanelLayout>