<com.slidinguppanel.SlidingUpPanelLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/slidinguppanel"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

        <TextView
                android:text="@string/tAppNameFullscreen"
                style="@style/Title"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#eee"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:gravity="center|bottom"
                android:text="@string/tAwesome"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/brought_by"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:gravity="center|top"
                android:text="@string/tCredits"
                android:textSize="14sp"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/graphic"
                android:scaleType="fitStart"
                android:contentDescription="@string/tSmile" />

    </LinearLayout>

</com.slidinguppanel.SlidingUpPanelLayout>