<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <com.slidinguppanel.SlidingUpPanelLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/slidinguppanel"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal">

            <TextView
                    android:text="@string/tAppNameCustomTextViews"
                    style="@style/Title"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/panel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/panel_height_custom"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/expand"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@string/tExpand"/>

                <TextView
                        android:id="@+id/collapse"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@string/tCollapse"/>

            </LinearLayout>

            <ScrollView
                    android:id="@+id/panel_content"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:paddingRight="@dimen/activity_horizontal_margin">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:src="@drawable/graphic"
                            android:scaleType="fitStart"
                            android:contentDescription="@string/tSmile"/>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </com.slidinguppanel.SlidingUpPanelLayout>
</LinearLayout>